--- a/codeception.yml
+++ b/codeception.yml
@@ -1,20 +1,9 @@
-# suite config
-suites:
-    api:
-        actor: ApiTester
-        path: .
-        modules:
-            enabled:
-                - REST:
-                    url: http://sceal.test.gbksoft.net/api/v1/
-                    depends: PhpBrowser
-
 paths:
     tests: tests
     output: tests/_output
     data: tests/_data
     support: tests/_support
-    envs: _envs
+    envs: tests/_envs
 
 settings:
     shuffle: false
