--- a/tests/api.suite.yml
+++ b/tests/api.suite.yml
@@ -2,5 +2,5 @@ actor: ApiTester
 modules:
     enabled:
         - REST:
-            url: http://sceal.prod.gbksoft.net/api/v1/
+            url: http://sceal.test.gbksoft.net/api/v1/
             depends: PhpBrowser
