--- a/tests/api.suite.yml
+++ b/tests/api.suite.yml
@@ -1,6 +1,8 @@
 actor: ApiTester
 modules:
     enabled:
+        - \Helper\Api:
+            domain: "sceal.test.gbksoft.net"
         - REST:
             url: http://sceal.test.gbksoft.net/api/v1/
             depends: PhpBrowser
